[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Manual.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/UiPlayer.png" type="Texture" id=2]

[node name="Manual" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Manual1" type="ColorRect" parent="CanvasLayer"]
margin_right = 638.0
margin_bottom = 362.0
color = Color( 0, 0, 0, 1 )

[node name="Titulo" type="Label" parent="CanvasLayer/Manual1"]
margin_left = -123.462
margin_top = 5.14426
margin_right = 295.538
margin_bottom = 70.1443
rect_scale = Vector2( 2.25066, 2.24722 )
text = "Controles

Setas direcionais, mover o jogardo.

Barra de espaco, utilizar Buff
"
align = 1
autowrap = true

[node name="Manual2" type="ColorRect" parent="CanvasLayer"]
margin_right = 638.0
margin_bottom = 362.0
color = Color( 0, 0, 0, 1 )

[node name="Titulo" type="Label" parent="CanvasLayer/Manual2"]
margin_left = -151.756
margin_right = 267.244
margin_bottom = 65.0
rect_scale = Vector2( 2.25066, 2.24722 )
text = "Batalha

Para atacar, se mova na direcao do inimigo.
Quando o inimigo morrer, ele deixara cair 
sua alma, passe por cima dela para coletar"
align = 1
autowrap = true

[node name="Manual3" type="ColorRect" parent="CanvasLayer"]
margin_right = 638.0
margin_bottom = 362.0
color = Color( 0, 0, 0, 1 )

[node name="Titulo" type="Label" parent="CanvasLayer/Manual3"]
margin_left = -151.756
margin_right = 267.244
margin_bottom = 65.0
rect_scale = Vector2( 2.25066, 2.24722 )
text = "Interface"
align = 1
autowrap = true

[node name="Titulo2" type="Label" parent="CanvasLayer/Manual3"]
margin_left = -150.0
margin_top = 150.0
margin_right = 269.0
margin_bottom = 215.0
rect_scale = Vector2( 2.25066, 2.24722 )
text = "Essa e a interface presente no jogo,
ela consiste da barra de vida do jogador e 
na fila de almas coletadas, o circulo maior
 eh a alma atual e os menores sao as
proximas almas"
align = 1
autowrap = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Manual3"]
margin_left = 260.0
margin_top = 80.0
margin_right = 300.0
margin_bottom = 120.0
rect_scale = Vector2( 3.92379, 0.656642 )
color = Color( 0, 1, 0, 1 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Manual3"]
position = Vector2( 310, 90 )
texture = ExtResource( 2 )
hframes = 5

[node name="Manual4" type="ColorRect" parent="CanvasLayer"]
editor/display_folded = true
visible = false
margin_right = 638.0
margin_bottom = 362.0
color = Color( 0, 0, 0, 1 )

[node name="Titulo" type="Label" parent="CanvasLayer/Manual4"]
margin_left = -148.326
margin_top = 1.71478
margin_right = 270.674
margin_bottom = 151.715
rect_scale = Vector2( 2.25066, 2.24722 )
text = "Inimigos

Cada inimigo representa um elemento da
natureza,  e sua alma esta relacionada 
com o mesmo
O vampiro representa a agua
A arvore representa a terra
O esqueleto representa o fogo
O fantasma representa o ar"
align = 1
autowrap = true

[node name="Manual5" type="ColorRect" parent="CanvasLayer"]
editor/display_folded = true
visible = false
margin_right = 638.0
margin_bottom = 362.0
color = Color( 0, 0, 0, 1 )

[node name="Titulo" type="Label" parent="CanvasLayer/Manual5"]
margin_left = -151.756
margin_right = 267.244
margin_bottom = 82.0
rect_scale = Vector2( 2.25066, 2.24722 )
text = "Almas
As almas coletadas podem ser usadas de 
duas formas, para ativar seu efeito especial
ou para dar dano elemental"
align = 1
autowrap = true

[node name="Manual6" type="ColorRect" parent="CanvasLayer"]
editor/display_folded = true
visible = false
margin_right = 638.0
margin_bottom = 362.0
color = Color( 0, 0, 0, 1 )

[node name="Titulo" type="Label" parent="CanvasLayer/Manual6"]
margin_left = -151.756
margin_right = 267.244
margin_bottom = 82.0
rect_scale = Vector2( 2.25066, 2.24722 )
text = "Dano elemental
Sua espada sempre causa dano de acordo
com o elemento da sua alma atual,
causando dano critico nos inimigos de 
elemento oposto
Agua > Fogo
Fogo>Terra
Terra>Ar
Ar>Agua"
align = 1
autowrap = true

[node name="Manual7" type="ColorRect" parent="CanvasLayer"]
editor/display_folded = true
visible = false
margin_right = 638.0
margin_bottom = 362.0
color = Color( 0, 0, 0, 1 )

[node name="Titulo" type="Label" parent="CanvasLayer/Manual7"]
margin_left = -151.756
margin_right = 267.244
margin_bottom = 82.0
rect_scale = Vector2( 2.25066, 2.24722 )
text = "Especial
Cada alma tem um efeito especial de curta
duracao, voce pode  consumir sua alma 
atual e ativar seu efeito
Agua: regenera parte da sua vida perdida
Fogo: Devolve parte do dano recebido
Terra: Nega parte do dano recebido
Ar: Aumenta a chance de desvio"
align = 1
autowrap = true

[node name="Proximo" type="ToolButton" parent="CanvasLayer"]
margin_left = 528.145
margin_top = 325.804
margin_right = 593.145
margin_bottom = 347.804
rect_scale = Vector2( 1.70148, 1.53077 )
text = "Proximo"

[node name="Anterior" type="ToolButton" parent="CanvasLayer"]
margin_left = -0.857361
margin_top = 323.232
margin_right = 39.1426
margin_bottom = 345.232
rect_scale = Vector2( 1.70148, 1.53077 )
text = "Voltar"
[connection signal="button_down" from="CanvasLayer/Proximo" to="." method="_on_Proximo_button_down"]
[connection signal="button_down" from="CanvasLayer/Anterior" to="." method="_on_Anterior_button_down"]
